[gd_scene load_steps=8 format=3 uid="uid://t7l5lywub7jg"]

[ext_resource type="Theme" uid="uid://becgxgj56yfdh" path="res://assets/style/default_theme.tres" id="1_g2og8"]
[ext_resource type="Script" path="res://scripts/uis/player/PlayerStatus.gd" id="1_hyxlm"]
[ext_resource type="LabelSettings" uid="uid://rp1sq4gf2r0l" path="res://assets/style/label_settings/shadow_small_medium_label.tres" id="3_h5jb3"]

[sub_resource type="Animation" id="Animation_u2ldc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathsLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeathsLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_a7bil"]
resource_name = "pop_ragequit_button"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RageQuitButton:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RageQuitButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 0.318471, 3.14),
"update": 0,
"values": [Vector2(1280, 106), Vector2(1101, 106), Vector2(922, 106)]
}

[sub_resource type="Animation" id="Animation_8ew2b"]
resource_name = "pop"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathsLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 3.14, 0.318471),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.125, 1.125), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DeathsLabel:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.909804, 0.168627, 0.176471, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2qmqy"]
_data = {
"RESET": SubResource("Animation_u2ldc"),
"pop_ragequit_button": SubResource("Animation_a7bil"),
"update_death_counter": SubResource("Animation_8ew2b")
}

[node name="PlayerStatus" type="CanvasLayer"]
script = ExtResource("1_hyxlm")

[node name="DeathsLabel" type="Label" parent="."]
offset_left = 19.0
offset_top = 21.0
offset_right = 467.0
offset_bottom = 56.0
theme = ExtResource("1_g2og8")
text = "Deaths: 00"
label_settings = ExtResource("3_h5jb3")

[node name="TimeLabel" type="Label" parent="."]
offset_left = 19.0
offset_top = 56.0
offset_right = 467.0
offset_bottom = 91.0
theme = ExtResource("1_g2og8")
text = "Time: 00:00:00"
label_settings = ExtResource("3_h5jb3")

[node name="RageQuitButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(0, 64)
offset_left = 1280.0
offset_top = 106.0
offset_right = 1604.0
offset_bottom = 170.0
theme = ExtResource("1_g2og8")
text = "button.ragequit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2qmqy")
}

[connection signal="pressed" from="RageQuitButton" to="." method="_on_rage_quit_button_pressed"]
